--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -183,7 +183,7 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-svg')
+    implementation project(':react-native-svg2')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
